fix bug #47848 (importNode doesn't preserve attribute namespaces) add tests